add subnet start/end addresses with ipv4/ipv6 support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     mongodb:
         image: "mongo:latest"
         container_name: "mongodb"
-        hostname: "mongodb"
+        hostname: "mongodb:3.0.12"
         expose:
             - "27017"
 
