--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,10 @@
 package: github.com/RackHD/ipam
 import:
 - package: github.com/gorilla/handlers
+  version: ^1.1.0
 - package: github.com/gorilla/mux
+  version: ^1.1.0
+- package: github.com/hashicorp/go-cleanhttp
 - package: gopkg.in/mgo.v2
   subpackages:
   - bson
